app/actor/point-actor.css
.point-actor {
	position: absolute;
	left: calc(1px * var(--x));
	top: calc(1px * var(--y));
}

.point-actor.actor-generic {
	background: red;
	width: 1px;
	height: 1px;
	position: absolute;
	left: calc(1px * var(--x));
	top: calc(1px * var(--y));
	box-shadow: 0 0 4px 4px rgba(0,255,0,0.45);
}

.point-actor.actor-generic[data-colliding=true] {
	box-shadow: 0 0 4px 4px rgba(0,0,255,0.45);
}

.actor-generic {
	z-index: 1;
}

.actor-generic:after {
	filter: invert(25%) brightness(200%) sepia(100%) hue-rotate(100deg) saturate(200%);
	display: block;
	position: absolute;
	content: ' ';
	background-image: url(/debug/arrow-east.svg);
	background-repeat: no-repeat;
	background-size: contain;
	background-position: center;
	width: 20px;
	height: 20px;
	z-index: 1000;
	top: 0;
	left: 0;
	--translate: translate(5px, calc(-50%));
	transform-origin: -5px 50%;
	transform: var(--translate) rotate(calc(0deg + calc(1rad * var(--debugVector))));
	opacity: 0.75;
}

.actor-generic[data-falling="false"][data-mode="0"]:after {
	transform: var(--translate) rotate(calc(0deg - calc(1rad * var(--debugVector))));
}

.actor-generic[data-falling="false"][data-mode="1"]:after {
	transform: var(--translate) rotate(calc(90deg - calc(1rad * var(--debugVector))));
}


.actor-generic[data-falling="false"][data-mode="2"]:after {
	transform: var(--translate) rotate(calc(180deg - calc(1rad * var(--debugVector))));
}

.actor-generic[data-falling="false"][data-mode="3"]:after {
	transform: var(--translate) rotate(calc(270deg - calc(1rad * var(--debugVector))));
}

.actor-generic[data-falling="false"][data-mode="0"][data-facing="left"]:after {
	transform: var(--translate) rotate(calc(180deg - calc(1rad * var(--debugVector))));
}

.actor-generic[data-falling="false"][data-mode="1"][data-facing="left"]:after {
	transform: var(--translate) rotate(calc(270deg - calc(1rad * var(--debugVector))));
}

.actor-generic[data-falling="false"][data-mode="2"][data-facing="left"]:after {
	transform: var(--translate) rotate(calc(0deg - calc(1rad * var(--debugVector))));
}

.actor-generic[data-falling="false"][data-mode="3"][data-facing="left"]:after {
	transform: var(--translate) rotate(calc(90deg - calc(1rad * var(--debugVector))));
}

.actor-item:after {
	content: ' ';
	font-size: 0.25rem;
	color: black;
	text-align: center;
	position: absolute;
	top: 0;
	left: 0;
	height: calc(1px * var(--height));
	width: calc(1px * var(--width));
	transform-origin: center bottom;
	box-shadow: none;
	background-repeat: no-repeat;
}

.actor-item.actor-explosion:after {
	background-image: url(/Sonic/explosion.png);
	--sprite-offset-x: -8px;
	--sprite-offset-y: -8px;
	width: 48px;
	height: 48px;

	animation: explosion steps(5) infinite;
	animation-duration: calc(1ms * 240);
}

.actor-item.actor-ring:after {
	background-image: url(/Sonic/rings.png);
	--sprite-offset-x: -20px;
	--sprite-offset-y: -20px;
	animation: ringSpin steps(7) infinite;
	animation-duration: calc(1ms * 480);
	transition: opacity 0.125s ease-out;
}

.actor-item.actor-ring.gone:after,
.actor-item.actor-ring.collected:after {
	--sprite-offset-y: -88px;
	animation: ringTwinkle steps(4) infinite;
	animation-duration: calc(1ms * 360);
}

.actor-item.actor-ring.gone:after {
	opacity: 0;
}

.actor-item.actor-monitor:after {
	background-image: url(/Sonic/ringMonitor.png);
	--sprite-offset-x: -18px;
	--sprite-offset-y: -13px;
	animation: monitor-flicker steps(4) infinite;
	animation-duration: calc(1ms * 480);
}

.actor-item.actor-monitor.actor-monitor-broken:after {
	background-image: url(/Sonic/brokenMonitor.png);
	background-position: var(--sprite-offset-x) var(--sprite-offset-y);
 	--sprite-offset-x: -18px;
	--sprite-offset-y: -12px;
	animation: none;
}

.actor-item.actor-question-block:after {
	background-image: url(/Sonic/question-block.png);
	--sprite-offset-x: -16px;
	--sprite-offset-y: -13px;
	animation: monitor-flicker steps(4) infinite;
	animation-duration: calc(1ms * 480);
}

.actor-item[data-mode="0"]:after {
	transform: translate(-50%, calc(-100% + 1px)) rotate(calc(-1rad * var(--angle)));
}

.actor-item[data-mode="1"]:after {
	transform: translate(-50%, calc(-100% + 1px)) rotate(calc( calc(-1rad * var(--angle) + 90deg)));
}

.actor-item[data-mode="2"]:after {
	transform: translate(-50%, calc(-100% + 1px)) rotate(calc( calc(-1rad * var(--angle) + 180deg)));
}

.actor-item[data-mode="3"]:after {
	transform: translate(-50%, calc(-100% + 1px)) rotate(calc( calc(-1rad * var(--angle) + 270deg)));
}

.actor-item:before {
	box-sizing: border-box;
	content: ' ';
	transform: translate(-50%, calc(-100% + 1px));
	position: absolute;
	top: 1px;
	left: 0px;
	height: calc(1px + calc(1px * var(--height)));
	width: calc(2px + calc(1px * var(--width)));
}

.actor-item[data-colliding="true"]:before {
	--collColor: rgba(255,0,0,0.333);
}

.actor-item.collision-top:before {
	border-top: 4px solid var(--collColor);
	top: 0px
}
.actor-item.collision-left:before {
	border-left: 4px solid var(--collColor);
}
.actor-item.collision-bottom:before {
	border-bottom: 4px solid var(--collColor);
}
.actor-item.collision-right:before {
	border-right: 4px solid var(--collColor);
}

@-webkit-keyframes monitor-flicker{
	from{
		background-position: var(--sprite-offset-x) var(--sprite-offset-y);
	}
	to{
		background-position: calc(-256px + var(--sprite-offset-x)) var(--sprite-offset-y);
	}
}

@-webkit-keyframes explosion{
	from{
		background-position: var(--sprite-offset-x) var(--sprite-offset-y);
	}
	to{
		background-position: calc(-320px + var(--sprite-offset-x)) var(--sprite-offset-y);
	}
}

@-webkit-keyframes ringSpin{
	from{
		background-position: var(--sprite-offset-x) var(--sprite-offset-y);
	}
	to{
		background-position: calc(-448px + var(--sprite-offset-x)) var(--sprite-offset-y);
	}
}


@-webkit-keyframes ringTwinkle{
	from{
		background-position: var(--sprite-offset-x) var(--sprite-offset-y);
	}
	to{
		background-position: calc(-256px + var(--sprite-offset-x)) var(--sprite-offset-y);
	}
}

